--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,316 +1,299 @@
 body {
-	margin: 0;
-	border: 0;
-	padding: 0;
-	background-image: url("http://hires.photospublic.com/PP21030314-light-concrete-wall-grunge-background.jpg");
-	opacity:;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: url("http://hires.photospublic.com/PP21030314-light-concrete-wall-grunge-background.jpg");
 }
 
-.header {
-	z-index: 1;
-	width: 100%;
-	border: 0;
-	position: fixed;
-	border-bottom-width: 2px;
-	border-color: darkgrey;
-	border-style: inset;
-	background: white;
-	padding-bottom: 0px;
+* {
+  box-sizing: border-box;
+}
+
+/* general */
+
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  clear: both;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 20px;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
 }
 
 h1 {
-	font-family: "Georgia", Times, Times New Roman, serif;
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
 }
 
-.myname {
-	padding-top: 6px;
-	padding-left: 20px;
-	padding-right: 20px;
-	float: left;
-	margin-left: 100px;
-	background: #15ead8;
-	color: #ffffff;
+h2,
+h3 {
+  font-size: 22px;
 }
 
-ul {
-	float: right;
-	margin-right: 10px;
-	margin-top: 30px;
-	list-style-type: none;
-	font-size: 20px;
+/* header */
+
+#masthead {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  margin: 0 0 30px;
+  overflow: auto;
+  color: #fff;
+  background: #fff;
+  border-bottom: 2px solid #ccc;
 }
 
-li {
-	padding-right: 10px;
-	padding-left: 10px;
-	float: right;
-
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
 }
 
-li a:hover {
-	background-color: ;
+nav {
+  float: right;
+  margin-top: 25px;
 }
 
-li a {
-	padding: 5px;
-	color: grey;
-	text-align: center;
-	text-decoration: none;
-
+nav a {
+  display: inline-block;
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  color: #999;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
 }
 
-hr {
-	height: 1px;
-	border: 0;
-	padding: 0;
-	margin: 1em 0;
-	border-top: 2px solid #ccc;
+nav a:first-child {
+  border-left: 0 none;
 }
 
-.Me {
-	padding-right: 17px;
-	float: left;
-	width: 225px;
-	height: 225px;
-}
-
-.Git {
-	margin: 0;
-	padding: 1px;
-	float: left;
-	height: 50px;
-	width: 31%
-}
-
-.Stack {
-	margin: 0;
-	padding: 0;
-	float: left;
-	height: 50px;
-	width: 33%;
-}
-
-.Linked {
-	margin: 0;
-	padding: 1px;
-	float: left;
-	height: 50px;
-	width: 33%;
-}
-
-.aboutwords {
-	margin: 1px;
-	color: #15ead8;
-}
-
-.aboutbox {
-	clear: both;
-	overflow: auto;
-	margin-top: 110px;
-	margin-left: 100px;
-	padding: 30px;
-	float: left;
-	background-color: white;
-	width: 40%;
-	height: 400px;
-}
-.connectbox {
-	width: 150px;
-	margin-top: 110px;
-	padding: 30px;
-	float: right;
-	background-color: white;
-	margin-right: 55px;
-}
-
-.connectwords {
-	color: #15ead8;
-	margin-top: 5px;
-}
+/* footer */
 
 footer {
-	clear: both;
-	position: fixed;
-	bottom: 0;
-	background: darkgrey;
-	width: 100%;
-	border-top-color: #15ead8;
-	border-top-width: 4px;
-	border-top-style: solid; 
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
 }
 
-.foot {
-	text-align: center;
+/* sidebar */
+
+.sidebar {
+  float: right;
+  width: 100%;
+  max-width: 270px;
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
 }
 
-.body {
-	height: 557px
+h3,
+.sidebar h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
 }
 
-.formbox {
-	margin-top: 110px;
-	margin-left: 100px;
-	padding: 30px;
-	float: left;
-	background-color: white;
-	width: 50%;
-	height: 400px;
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
+}
+
+.social:last-child {
+  margin-right: 0;
+}
+
+/* main */
+
+#main-container {
+  padding-top: 130px;
+}
+
+.main-section {
+  float: left;
+  width: 100%;
+  max-width: 650px;
+  padding: 30px;
+  margin: 0 0 40px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+/* portfolio page */
+
+.work {
+  position: relative;
+  float: left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow: auto;
+}
+
+.work:nth-child(even) {
+  margin-right: 40px;
+}
+
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
+/* contact page */
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
 }
 
 textarea {
-	width: 100%;
-}
-
-input[type=text] {
-	width: 100%;
-	height: 20px;
-
-	-webkit-appearance: none;
+  height: 200px;
 }
 
 input[type=submit] {
-	background: #15ead8;
-	border: 0;
-	height: 40px;
-	width: 90px;
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
 }
 
-.works {
-	clear: both;
-	margin-bottom: 90px;
-	margin-top: 110px;
-	margin-left: 100px;
-	padding: 30px;
-	float: left;
-	background-color: white;
-	width: 50%;
-	height: 100%;
+/* Media Queries */
+
+@media screen and (max-width: 980px) {
+	.auth-image {
+		width: 100%;
+		height: auto;
+	}
+	.main-section {
+		max-width: 50%;
+		margin-left: 6%;
+	}
+	.sidebar {
+		margin-right: 6%;
+	}
 }
 
-.beebox {
-	position: relative;
-	float: left;
-	width: 300px;
-	height: 300px;
-	margin-bottom: 50px;	
+@media screen and (max-width: 768px) {
+	.main-section {
+		max-width: 94%;
+		margin-left: 22px;
+	}
+	.sidebar {
+		max-width: 94%;
+		margin-right: 23px;
+	
+	}
+	.auth-image {
+		width: 360px;
+		height: auto;
+	}
 }
 
-.bee {
-	width: 100%;
-	height: 100%;
-}
-
-.g1name {
-	position: absolute;
-	width: 100%;
-	top: 225px;
-	left: 0;
-	background: #15ead8;
-	color: white;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;
-}
-
-.rpgbox {
-	position: relative;
-	float: right;
-	width: 300px;
-	height: 300px;	
-	margin-bottom: 50px;
-
-}
-
-.rpg {
-	width: 100%;
-	height: 100%;
-
-}
-
-.g2name {
-	position: absolute;
-	width: 100%;
-	top: 225px;
-	left: 0;
-	background: #15ead8;
-	color: white;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;
-}
-
-.triviabox {
-	clear: both;
-	float: left;
-	position: relative;
-	width: 300px;
-	height: 300px;	
-	margin-bottom: 50px;
-}
-
-.trivia {
-	width: 100%;
-	height: 100%;
-}
-
-.g3name {
-	position: absolute;
-	width: 100%;
-	top: 225px;
-	left: 0;
-	background: #15ead8;
-	color: white;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;	
-}
-
-.infobox {
-	float: right;
-	position: relative;
-	width: 300px;
-	height: 300px;	
-	margin-bottom: 50px;
-}
-
-.info {
-	width: 100%;
-	height: 100%;
-}
-
-.g4name{
-	position: absolute;
-	width: 100%;
-	top: 225px;
-	left: 0;
-	background: #15ead8;
-	color: white;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;	
-}
-
-.rpsbox {
-	clear: both;
-	position: relative;
-	float: left;
-	width: 300px;
-	height: 300px;	
-}
-
-.rps {
-	width: 100%;
-	height: 100%;
-}
-
-.g5name {
-	position: absolute;
-	width: 100%;
-	top: 225px;
-	left: 0;
-	background: #15ead8;
-	color: white;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;
+@media screen and (max-width: 640px) {
+	.main-section {
+		max-width: 94%;
+		margin-left: 23px;
+		margin-top: -140px;
+	}
+	.auth-image {	
+		width: 100%;
+		height: auto;
+	}
+	.sidebar {
+		max-width: 94%;
+		margin-right: 16px;
+	}
+	nav {
+		width: 100%;
+	}
+	#logo {
+		width: 100%;
+	}
+	nav a {
+		padding: 0 10%;
+	}
+	#masthead {
+		position: static;
+	}
 }
